--- a/config.sample.json
+++ b/config.sample.json
@@ -11,7 +11,13 @@
   "accessories": [
     {
       "accessory": "Thermostat",
-      "name": "Pi Thermostat"
+      "name": "Pi Thermostat",
+      "fanRelayPin": 10,
+      "heatRelayPin": 11,
+      "coolRelayPin": 12,
+      "temperatureSensorPin": 4,
+      "minimumOnOffTime": 60000,
+      "temperatureCheckInterval": 10000
     }
   ],
 
