--- a/config.sample.json
+++ b/config.sample.json
@@ -16,8 +16,9 @@
       "heatRelayPin": 21,
       "coolRelayPin": 20,
       "temperatureSensorPin": 4,
-      "minimumOnOffTime": 80000,
-      "minimumOffOnDelay": 15000,
+      "minimumSystemRunTime": 120000,
+      "blowerTurnOffTime": 80000,
+      "startDelay": 10000,
       "temperatureCheckInterval": 10000
     }
   ],
